Deleted node_modules folder

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
     <script src="src/core/string.js"></script>
     <script src="src/core/url.js"></script>
 
+    <script src="src/engine/geom/face.js"></script>
+    <script src="src/engine/geom/vertex.js"></script>
+
     <script src="src/ui/loading.js"></script>
 
     <script src="src/app.js"></script>
