Added karma testing file

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
     <script src="src/engine/geom/face.js"></script>
     <script src="src/engine/geom/vertex.js"></script>
+    <script src="src/engine/geom/volume.js"></script>
 
     <script src="src/ui/loading.js"></script>
 
