--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+<!--suppress JSUnusedLocalSymbols -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -31,6 +33,7 @@
     <meta property="og:title" content="ThreeMinesSweeper"/>
 
     <!-- Load libraries -->
+    <script>let $init_time_app_load = new Date();</script>
     <link rel="stylesheet" type="text/css" href="lib/animate/animate.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/font-awesome/css/all.min.css" media="screen">
@@ -72,6 +75,7 @@
 
     <script src="src/config.js"></script>
     <script src="src/core/globals.js"></script>
+    <script src="src/core/errors.js"></script>
     <script src="src/core/color.js"></script>
     <script src="src/core/console.js"></script>
     <script src="src/core/date.js"></script>
