Added init js, distance vertex

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta property="og:title" content="ThreeMinesSweeper"/>
 
     <!-- Load libraries -->
-    <script>let $init_time_app_load = new Date();</script>
+    <script src="init.js"></script>
     <link rel="stylesheet" type="text/css" href="lib/animate/animate.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/font-awesome/css/all.min.css" media="screen">
