Added basic readme, moved src/res to resources/ folder

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>ThreeMinesSweeper</title>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="src/res/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="src/res/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="src/res/favicon-16x16.png">
-    <link rel="manifest" href="src/res/site.webmanifest">
-    <link rel="mask-icon" href="src/res/safari-pinned-tab.svg" color="#d0642f">
-    <link rel="shortcut icon" href="src/res/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="resources/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/favicon-16x16.png">
+    <link rel="manifest" href="resources/site.webmanifest">
+    <link rel="mask-icon" href="resources/safari-pinned-tab.svg" color="#d0642f">
+    <link rel="shortcut icon" href="resources/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="ThreeMinesSweeper">
     <meta name="application-name" content="ThreeMinesSweeper">
     <meta name="msapplication-TileColor" content="#da532c">
