Added viewer to app load

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <script src="src/engine/geom/face.js"></script>
     <script src="src/engine/geom/vertex.js"></script>
     <script src="src/engine/geom/volume.js"></script>
+    <script src="src/engine/viewer/viewer.js"></script>
 
     <script src="src/ui/globals.js"></script>
     <script src="src/ui/themes.js"></script>
