Added background color, improved viewer load

--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
     <script src="lib/notification.js/notification.min.js"></script>
 
     <!-- Load styles -->
-    <link rel="stylesheet" type="text/css" href="src/stylesheets/root.css" media="screen">
     <link rel="stylesheet" type="text/css" href="src/stylesheets/lib.css" media="screen">
     <link rel="stylesheet" type="text/css" href="src/stylesheets/loading.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/root.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/viewer.css" media="screen">
 
     <!-- Load application -->
     <script src="src/about/about.js"></script>
