--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
     <script src="src/engine/geom/volume.js"></script>
     <script src="src/engine/viewer/viewer.js"></script>
 
+    <script src="src/engine/generator/generator.js"></script>
+    <script src="src/engine/generator/basic_cube.js"></script>
+
     <script src="src/ui/globals.js"></script>
     <script src="src/ui/themes.js"></script>
     <script src="src/ui/loading.js"></script>
