Added basic triangulation

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <script src="lib/jquery-scrollLock/jquery-scrollLock.min.js"></script>
     <script src="lib/jscookie/js.cookie-2.2.0.js"></script>
     <script src="lib/md5/md5.min.js"></script>
+    <script src="lib/earcut/earcut.js"></script>
     <script src="lib/three.js/three.min.js"></script>
     <script src="lib/three.js/OrbitControls.min.js"></script>
     <script src="lib/stats.js/stats.min.js"></script>
