Added dialog administrator

--- a/index.html
+++ b/index.html
@@ -102,8 +102,9 @@
     <script src="src/engine/viewer/viewer.js"></script>
 
     <script src="src/ui/globals.js"></script>
-    <script src="src/ui/themes.js"></script>
+    <script src="src/ui/dialogs.js"></script>
     <script src="src/ui/loading.js"></script>
+    <script src="src/ui/themes.js"></script>
 
     <script src="src/app.js"></script>
 
