Added test production mode

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
     <script src="src/i18n/en.js"></script>
 
     <script src="src/config.js"></script>
+    <script src="src/core/env/mode_production.js"></script>
     <script src="src/core/globals.js"></script>
     <script src="src/core/errors.js"></script>
     <script src="src/core/color.js"></script>
