Updated game resources

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <title>ThreeMinesSweeper</title>
 
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="resources/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="resources/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/favicon-16x16.png">
-    <link rel="manifest" href="resources/site.webmanifest">
-    <link rel="mask-icon" href="resources/safari-pinned-tab.svg" color="#d0642f">
-    <link rel="shortcut icon" href="resources/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="resources/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/favicon/favicon-16x16.png">
+    <link rel="manifest" href="resources/favicon/site.webmanifest">
+    <link rel="mask-icon" href="resources/favicon/safari-pinned-tab.svg" color="#d0642f">
+    <link rel="shortcut icon" href="resources/favicon/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="ThreeMinesSweeper">
     <meta name="application-name" content="ThreeMinesSweeper">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-TileImage" content="src/res/mstile-144x144.png">
-    <meta name="msapplication-config" content="src/res/browserconfig.xml">
+    <meta name="msapplication-TileImage" content="resources/favicon/mstile-144x144.png">
+    <meta name="msapplication-config" content="resources/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
     <!-- meta-tags -->
