--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     <script src="src/engine/generator/generator.js"></script>
     <script src="src/engine/generator/basic_cube.js"></script>
     <script src="src/engine/generator/basic_pyramid.js"></script>
+    <script src="src/engine/generator/cross_fractal.js"></script>
     <script src="src/engine/generator/sierpinski_cube.js"></script>
 
     <script src="src/engine/viewer/viewer.js"></script>
