--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <script src="src/engine/generator/basic_pyramid.js"></script>
     <script src="src/engine/generator/cross_fractal.js"></script>
     <script src="src/engine/generator/sierpinski_cube.js"></script>
+    <script src="src/engine/generator/sierpinski_triangle.js"></script>
 
     <script src="src/engine/viewer/viewer.js"></script>
 
