Added mobile support

--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- meta-tags -->
-    <meta name="description"
-          content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps"/>
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="googlebot" content="noindex, noarchive"/>
     <meta name="robots" content="noindex, noarchive"/>
+    <meta property="og:title" content="ThreeMinesSweeper"/>
+    <meta name="twitter:title" content="ThreeMinesSweeper"/>
+    <meta name="description"
+          content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps"/>
     <meta name="twitter:description"
           content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps"/>
-    <meta name="twitter:title" content="ThreeMinesSweeper"/>
     <meta property="og:description"
           content="TMS is an experimental 3D minesweeper game capable to render advanced geometric maps"/>
-    <meta property="og:title" content="ThreeMinesSweeper"/>
 
     <!-- Load libraries -->
     <script src="init.js"></script>
