--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
     <script src="src/engine/generator/sierpinski_triangle.js"></script>
     <script src="src/engine/generator/sphere.js"></script>
 
-    <script src="src/engine/viewer/viewer.js"></script>
+    <script src="src/engine/tms/viewer.js"></script>
+    <script src="src/engine/tms/events.js"></script>
+    <script src="src/engine/tms/minesweeper.js"></script>
+    <script src="src/engine/tms/tms.js"></script>
 
     <script src="src/ui/globals.js"></script>
     <script src="src/ui/dialogs.js"></script>
