--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     <script src="lib/earcut/earcut.js"></script>
     <script src="lib/delaunator/delaunator.min.js"></script>
     <script src="lib/three.js/three.min.js"></script>
-    <script src="lib/three.js/OrbitControls.min.js"></script>
+    <script src="lib/three.js/OrbitControls.js"></script>
+    <script src="lib/three.js/FlyControls.js"></script>
     <script src="lib/stats.js/stats.min.js"></script>
     <script src="lib/spin/spin.js"></script>
     <script src="lib/dat.gui/dat.gui.min.js"></script>
