Added basic sounds

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <script src="lib/dat.gui/dat.gui.min.js"></script>
     <script src="lib/toastr/toastr.min.js"></script>
     <script src="lib/notification.js/notification.min.js"></script>
+    <script src="lib/ion.sound/ion.sound.min.js"></script>
 
     <!-- Load styles -->
     <link rel="stylesheet" type="text/css" href="src/stylesheets/lib.css" media="screen">
