--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     <script src="src/engine/generator/sierpinski_cube.js"></script>
     <script src="src/engine/generator/sierpinski_triangle.js"></script>
     <script src="src/engine/generator/sphere.js"></script>
+    <script src="src/engine/generator/square.js"></script>
 
     <script src="src/engine/tms/viewer.js"></script>
     <script src="src/engine/tms/events.js"></script>
