Viewer now deletes meshes after each game

--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
 <div id="header"></div>
 <div id="root"></div>
 <div id="viewer">
-    <div id="game-ui">
+    <div id="game-ui" class="noselect">
         <div class="game-ui-left-column">
             <button id="game-ui-button-menu" type="button" class="btn hvr-grow-shadow game-ui-button"></button>
-            <button id="game-ui-button-reset" type="button" class="btn btn-danger hvr-shadow game-ui-button">Reset</button>
+            <button id="game-ui-button-reset" type="button" class="btn btn-danger hvr-shadow game-ui-button"></button>
         </div>
         <div class="game-ui-middle-column">
             <div id="game-time-counter">00:00:00</div>
