--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <script src="lib/notification.js/notification.min.js"></script>
     <script src="lib/ion.sound/ion.sound.min.js"></script>
     <script src="lib/easytimer/easytimer.min.js"></script>
+    <script src="https://cdn.db-ip.com/js/dbip.js"></script>
 
     <!-- Load styles -->
     <link rel="stylesheet" type="text/css" href="src/stylesheets/game.css" media="screen">
