--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <div id="viewer">
     <div id="game-ui" class="noselect">
         <div class="game-ui-left-column">
-            <button id="game-ui-button-menu" type="button" class="btn hvr-grow-shadow game-ui-button">
+            <button id="game-ui-button-menu" type="button" class="btn hvr-shadow game-ui-button">
                 <i class="fas fa-home"></i>
             </button>
             <button id="game-ui-button-reset" type="button" class="btn btn-danger hvr-shadow game-ui-button">
