Added scoreboard ui

--- a/index.html
+++ b/index.html
@@ -35,17 +35,6 @@
 
     <!-- Load libraries -->
     <script src="init.js"></script>
-    <link rel="stylesheet" type="text/css" href="lib/animate/animate.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="lib/font-awesome/css/all.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="lib/hover/hover.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="lib/jquery-confirm/jquery-confirm.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="lib/normalize/normalize.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="lib/spin/spin.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="lib/dat.gui/dat.gui.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="lib/toastr/toastr.min.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="lib/notification.js/notification.min.css" media="screen">
-
     <script src="lib/jquery/jquery-3.3.1.js"></script>
     <script src="lib/jquery-confirm/jquery-confirm.min.js"></script>
     <script src="lib/jquery-dateFormat/jquery-dateFormat.min.js"></script>
@@ -65,6 +54,17 @@
     <script src="lib/ion.sound/ion.sound.min.js"></script>
     <script src="lib/easytimer/easytimer.min.js"></script>
     <script src="https://cdn.db-ip.com/js/dbip.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="lib/animate/animate.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/font-awesome/css/all.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/hover/hover.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/jquery-confirm/jquery-confirm.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/normalize/normalize.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/spin/spin.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/dat.gui/dat.gui.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/toastr/toastr.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/notification.js/notification.min.css" media="screen">
 
     <!-- Load styles -->
     <link rel="stylesheet" type="text/css" href="src/stylesheets/game.css" media="screen">
@@ -170,10 +170,74 @@
                 <span id="game-ui-question-counter">0</span>
                 <img src="resources/ui/question.png" alt=""/>
             </div>
+            <div id="game-bookmarks-container">
+                <div id="game-bookmark-header">
+                    <div id="game-bookmark-title">Scoreboard</div>
+                    <div id="game-bookmark-name">SierpinskiCube^2 10%</div>
+                </div>
+                <div id="game-bookmark-content">
+                    <div class="game-bookmark-entry">
+                        <div class="game-bookmark-user">
+                            <div class="game-bookmark-username">ppizarror</div>
+                            <div class="game-bookmark-userdata">
+                                <div class="game-bookmark-userdata-position">
+                                    #1
+                                </div>
+                                <div class="game-bookmark-userdata-img">
+                                    <img src="resources/flags/cl.png" alt=""/>
+                                </div>
+                                <div class="game-bookmark-userdata-date">
+                                    01/10/2019
+                                </div>
+                            </div>
+                        </div>
+                        <div class="game-bookmark-time">
+                            33.5
+                        </div>
+                    </div>
+                    <div class="game-bookmark-entry">
+                        <div class="game-bookmark-user">
+                            <div class="game-bookmark-username">ppizarror</div>
+                            <div class="game-bookmark-userdata">
+                                <div class="game-bookmark-userdata-position">
+                                    #1
+                                </div>
+                                <div class="game-bookmark-userdata-img">
+                                    <img src="resources/flags/cl.png" alt=""/>
+                                </div>
+                                <div class="game-bookmark-userdata-date">
+                                    01/10/2019
+                                </div>
+                            </div>
+                        </div>
+                        <div class="game-bookmark-time">
+                            33.5
+                        </div>
+                    </div>
+                    <div class="game-bookmark-entry">
+                        <div class="game-bookmark-user">
+                            <div class="game-bookmark-username">ppizarror</div>
+                            <div class="game-bookmark-userdata">
+                                <div class="game-bookmark-userdata-position">
+                                    #1
+                                </div>
+                                <div class="game-bookmark-userdata-img">
+                                    <img src="resources/flags/cl.png" alt=""/>
+                                </div>
+                                <div class="game-bookmark-userdata-date">
+                                    01/10/2019
+                                </div>
+                            </div>
+                        </div>
+                        <div class="game-bookmark-time">
+                            33.5
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-<div id="viewer-gui"></div>
-<div id="menu-ui"></div>
+    <div id="viewer-gui"></div>
+    <div id="menu-ui"></div>
 </body>
 </html>
