--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <script src="src/core/errors.js"></script>
     <script src="src/core/color.js"></script>
     <script src="src/core/console.js"></script>
+    <script src="src/core/country.js"></script>
     <script src="src/core/date.js"></script>
     <script src="src/core/dom.js"></script>
     <script src="src/core/file.js"></script>
@@ -170,74 +171,17 @@
                 <span id="game-ui-question-counter">0</span>
                 <img src="resources/ui/question.png" alt=""/>
             </div>
-            <div id="game-bookmarks-container">
-                <div id="game-bookmark-header">
-                    <div id="game-bookmark-title">Scoreboard</div>
-                    <div id="game-bookmark-name">SierpinskiCube^2 10%</div>
+            <div id="game-scoreboard-container">
+                <div id="game-scoreboard-header">
+                    <div id="game-scoreboard-title"></div>
+                    <div id="game-scoreboard-name"></div>
                 </div>
-                <div id="game-bookmark-content">
-                    <div class="game-bookmark-entry">
-                        <div class="game-bookmark-user">
-                            <div class="game-bookmark-username">ppizarror</div>
-                            <div class="game-bookmark-userdata">
-                                <div class="game-bookmark-userdata-position">
-                                    #1
-                                </div>
-                                <div class="game-bookmark-userdata-img">
-                                    <img src="resources/flags/cl.png" alt=""/>
-                                </div>
-                                <div class="game-bookmark-userdata-date">
-                                    01/10/2019
-                                </div>
-                            </div>
-                        </div>
-                        <div class="game-bookmark-time">
-                            33.5
-                        </div>
-                    </div>
-                    <div class="game-bookmark-entry">
-                        <div class="game-bookmark-user">
-                            <div class="game-bookmark-username">ppizarror</div>
-                            <div class="game-bookmark-userdata">
-                                <div class="game-bookmark-userdata-position">
-                                    #1
-                                </div>
-                                <div class="game-bookmark-userdata-img">
-                                    <img src="resources/flags/cl.png" alt=""/>
-                                </div>
-                                <div class="game-bookmark-userdata-date">
-                                    01/10/2019
-                                </div>
-                            </div>
-                        </div>
-                        <div class="game-bookmark-time">
-                            33.5
-                        </div>
-                    </div>
-                    <div class="game-bookmark-entry">
-                        <div class="game-bookmark-user">
-                            <div class="game-bookmark-username">ppizarror</div>
-                            <div class="game-bookmark-userdata">
-                                <div class="game-bookmark-userdata-position">
-                                    #1
-                                </div>
-                                <div class="game-bookmark-userdata-img">
-                                    <img src="resources/flags/cl.png" alt=""/>
-                                </div>
-                                <div class="game-bookmark-userdata-date">
-                                    01/10/2019
-                                </div>
-                            </div>
-                        </div>
-                        <div class="game-bookmark-time">
-                            33.5
-                        </div>
-                    </div>
-                </div>
+                <div id="game-scoreboard-content"></div>
             </div>
         </div>
     </div>
-    <div id="viewer-gui"></div>
-    <div id="menu-ui"></div>
+</div>
+<div id="viewer-gui"></div>
+<div id="menu-ui"></div>
 </body>
 </html>
