Added menu basic file

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <link rel="stylesheet" type="text/css" href="src/stylesheets/game.css" media="screen">
     <link rel="stylesheet" type="text/css" href="src/stylesheets/lib.css" media="screen">
     <link rel="stylesheet" type="text/css" href="src/stylesheets/loading.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="src/stylesheets/menu.css" media="screen">
     <link rel="stylesheet" type="text/css" href="src/stylesheets/root.css" media="screen">
     <link rel="stylesheet" type="text/css" href="src/stylesheets/viewer.css" media="screen">
 
@@ -143,8 +144,6 @@
 </head>
 
 <body>
-<div id="header"></div>
-<div id="root"></div>
 <div id="viewer">
     <div id="game-ui" class="noselect">
         <div class="game-ui-left-column">
@@ -182,6 +181,6 @@
     </div>
 </div>
 <div id="viewer-gui"></div>
-<div id="menu-ui"></div>
+<div id="menu"></div>
 </body>
 </html>
