--- a/index.html
+++ b/index.html
@@ -117,10 +117,11 @@
     <script src="src/engine/generator/sphere.js"></script>
     <script src="src/engine/generator/square.js"></script>
 
-    <script src="src/engine/tms/viewer.js"></script>
     <script src="src/engine/tms/events.js"></script>
+    <script src="src/engine/tms/menu.js"></script>
     <script src="src/engine/tms/minesweeper.js"></script>
     <script src="src/engine/tms/tms.js"></script>
+    <script src="src/engine/tms/viewer.js"></script>
 
     <script src="src/ui/globals.js"></script>
     <script src="src/ui/dialogs.js"></script>
@@ -144,7 +145,9 @@
 </head>
 
 <body>
-<div id="viewer">
+<div id="menu" class="game-container"></div>
+<div id="viewer" class="game-container">
+    <div id="viewer-gui"></div>
     <div id="game-ui" class="noselect">
         <div class="game-ui-left-column">
             <button id="game-ui-button-menu" type="button" class="btn hvr-shadow game-ui-button">
@@ -180,7 +183,5 @@
         </div>
     </div>
 </div>
-<div id="viewer-gui"></div>
-<div id="menu"></div>
 </body>
 </html>
