Menu basic layout

--- a/index.html
+++ b/index.html
@@ -145,7 +145,26 @@
 </head>
 
 <body>
-<div id="menu" class="game-container"></div>
+<div id="menu" class="game-container" style="display: none;">
+    <div id="menu-container">
+        <div id="menu-header">
+            <div class="menu-header-icon">
+                <img src="resources/ui/icon.png" alt="" />
+            </div>
+            <div class="menu-header-title">ThreeMineSweeper</div>
+        </div>
+        <div id="menu-content">
+            <div class="menu-main-button">New Game</div>
+            <div class="menu-main-button">How to play</div>
+            <div class="menu-main-button">About</div>
+        </div>
+        <div id="menu-footer">
+            <div class="menu-footer-item"></div>
+            <div class="menu-footer-item">Author: ppizarror</div>
+            <div class="menu-footer-item">v16.4.2 (10/20/1024) @g</div>
+        </div>
+    </div>
+</div>
 <div id="viewer" class="game-container">
     <div id="viewer-gui"></div>
     <div id="game-ui" class="noselect">
