Added sounds interface

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     <script src="src/engine/tms/events.js"></script>
     <script src="src/engine/tms/menu.js"></script>
     <script src="src/engine/tms/minesweeper.js"></script>
+    <script src="src/engine/tms/sounds.js"></script>
     <script src="src/engine/tms/tms.js"></script>
     <script src="src/engine/tms/viewer.js"></script>
 
