--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <script src="lib/ion.sound/ion.sound.min.js"></script>
     <script src="lib/easytimer/easytimer.min.js"></script>
     <script src="https://cdn.db-ip.com/js/dbip.js"></script>
+    <script src="lib/rippler/rippler.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="lib/animate/animate.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.min.css" media="screen">
@@ -65,6 +66,7 @@
     <link rel="stylesheet" type="text/css" href="lib/dat.gui/dat.gui.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/toastr/toastr.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/notification.js/notification.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/rippler/rippler.min.css" media="screen">
 
     <!-- Load styles -->
     <link rel="stylesheet" type="text/css" href="src/stylesheets/game.css" media="screen">
@@ -146,18 +148,15 @@
 </head>
 
 <body>
-<div id="menu" class="game-container" style="display: none;">
-    <div id="menu-container">
+<div id="menu" class="game-container">
+    <div id="menu-container" class="noselect" style="display: none;">
         <div id="menu-header">
-            <div class="menu-header-icon">
-                <img src="resources/ui/icon.png" alt="" />
+            <div class="menu-header-icon animated slideInDown delay-05s">
+                <img src="resources/ui/icon.png" alt="" class="animated infinite" />
             </div>
-            <div class="menu-header-title">ThreeMineSweeper</div>
+            <div class="menu-header-title animated fadeIn">ThreeMineSweeper</div>
         </div>
         <div id="menu-content">
-            <div class="menu-main-button">New Game</div>
-            <div class="menu-main-button">How to play</div>
-            <div class="menu-main-button">About</div>
         </div>
         <div id="menu-footer">
             <div class="menu-footer-item"></div>
