Improved main menu header style

--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
 <div id="menu" class="game-container">
     <div id="menu-container" class="noselect" style="display: none;">
         <div id="menu-header">
-            <div class="menu-header-icon animated slideInDown delay-05s">
+            <div class="menu-header-icon animated slideInDown delay-03s">
                 <img src="resources/ui/icon.png" alt="" class="animated infinite" />
             </div>
-            <div class="menu-header-title animated fadeIn">ThreeMineSweeper</div>
+            <div class="menu-header-title animated fadeIn delay-02s">ThreeMineSweeper</div>
         </div>
         <div id="menu-content">
         </div>
