Added languge selector

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <script src="lib/easytimer/easytimer.min.js"></script>
     <script src="https://cdn.db-ip.com/js/dbip.js"></script>
     <script src="lib/rippler/rippler.min.js"></script>
+    <script src="lib/tooltipster/tooltipster.bundle.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="lib/animate/animate.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.min.css" media="screen">
@@ -152,17 +153,12 @@
     <div id="menu-container" class="noselect" style="display: none;">
         <div id="menu-header">
             <div class="menu-header-icon animated slideInDown delay-03s">
-                <img src="resources/ui/icon.png" alt="" class="animated infinite" />
+                <img src="resources/ui/icon.png" alt="" class="animated infinite"/>
             </div>
-            <div class="menu-header-title animated fadeIn delay-02s">ThreeMineSweeper</div>
+            <div class="menu-header-title animated fadeIn delay-02s"></div>
         </div>
-        <div id="menu-content">
-        </div>
-        <div id="menu-footer">
-            <div class="menu-footer-item"></div>
-            <div class="menu-footer-item">Author: ppizarror</div>
-            <div class="menu-footer-item">v16.4.2 (10/20/1024) @g</div>
-        </div>
+        <div id="menu-content"></div>
+        <div id="menu-footer"></div>
     </div>
 </div>
 <div id="viewer" class="game-container">
