Added generators to menu

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <link rel="stylesheet" type="text/css" href="lib/toastr/toastr.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/notification.js/notification.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/rippler/rippler.min.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/tooltipster/tooltipster.bundle.min.css" media="screen">
 
     <!-- Load styles -->
     <link rel="stylesheet" type="text/css" href="src/stylesheets/game.css" media="screen">
