Improved menu subheader

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
             </div>
             <div class="menu-header-title animated fadeIn delay-02s"></div>
         </div>
+        <div id="menu-subheader"></div>
         <div id="menu-content"></div>
         <div id="menu-footer"></div>
     </div>
