Improved back to menu button

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <link rel="stylesheet" type="text/css" href="lib/rippler/rippler.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/tooltipster/tooltipster.bundle.min.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/jquery-nice-select/nice-select.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="lib/jquery-nice-select/style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="lib/pace/blue/pace-theme-flash.min.css" media="screen">
 
     <!-- Init libraries -->
